fixed responsive grid layout on speakers page, still have to fix vertical overflow issue

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -166,10 +166,18 @@ body {
     }
     .section {
         width: 100vw;
-        height: max-content;
+        // height: max-content;
+        min-height: 100vh;
         scroll-snap-align: start;
         position: relative;
     }
+
+    .section[id^=algtoppr-] {
+    height:100vh;
+    background-color: var(--bs-light-section-bg);
+    // height: max-content;
+    }
+
     .section__content {
         display: block;
         position: absolute;
@@ -202,12 +210,6 @@ body {
         width: calc(100vw - 200px);
     }
 
-    .section[id^=algtoppr-] {
-        // height:100vh;
-        background-color: var(--bs-light-section-bg);
-        height: max-content;
-    }
-
 // FLEX
     .flex__row {
         display: flex;
@@ -219,15 +221,39 @@ body {
 
 // GRID
     .gallery {
-        padding: 2rem;
+        padding: 0;
+        margin: 0;
     }
 
-    .gallery.gallery__list {
+    .gallery h1 {
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+
+    .gallery ul.gallery__list {
+        margin-top: 0;
+        padding: 0;
+        list-style-type: none;
         display: grid;
+        row-gap: 5px;
         grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-        grid-template-rows: repeat(auto-fit, minmax(80px, 1fr));
-        grid-gap: 1rem;
+        // grid-template-rows: repeat(6, 80px);
+        // grid-gap: 1rem;
         grid-auto-flow: dense;
+    }
+
+    ul.gallery__list li.gallery__item {
+        grid-column: span 1;
+    }
+
+    .gallery__item--title {
+        display: block;
+        color: var(--bs-orange);
+        font-weight: 700;
+    }
+
+    .gallery__item--subtitle {
+        display: block;
     }
 
 
